Removed old favicon and added meta description to index

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Relive Spotify</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Descritpion" content="Relive Spotify lets you relive your most listened spotify tracks.">
   <link rel="icon" type="image/x-icon" href="assets/favicon-white-32.png">
 </head>
 <body class="bg-gray-100">
